# dns-client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  rust_release.yml
licenses/: jedisct1_rust-dnsclient
src/: main.rs
