[package]
name = "dns-client"
version = "0.0.2"
authors = ["Torben Carstens <github@carstens.tech>"]
edition = "2018"
repository = "https://github.com/torbencarstens/dns-client"
license = "ISC"
description = "simple dns-client"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dnsclient = "0.1.7"
